--- a/ar-app/index.html
+++ b/ar-app/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" href="css/onsenui.css">
-	<link rel="stylesheet" href="css/onsen-css-components.min.css">
+	<link rel="stylesheet" href="assets/css/onsenui.css">
+	<link rel="stylesheet" href="assets/css/onsen-css-components.min.css">
 	
-	<script src= "js/bundle.js"></script>
-	<script src= "js/aframe-ar.js"></script>
+	<script src= "assets/js/bundle.js"></script>
+	<script src= "assets/js/aframe-ar.js"></script>
 
 	
-	<script src= "js/aframe-extras.min.js"></script>
+	<script src= "assets/js/aframe-extras.min.js"></script>
 </head>
 <body>
 		<ons-navigator id="myNavigator" page="carouselView.html"></ons-navigator>
