--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,8 @@
 
 					<!-- Assets Manager-->
 					<a-assets>
-						<a-mixin waiTilLoad="src: waiting; dataUrl: assets/waitingSprite.png ; " id="env-cube" cube-env-map="path: assets/cubemap/;
-                        extension: jpg;
-                        reflectivity: 0.5;"
+						<a-mixin waiTilLoad="src: waiting; dataUrl: assets/waitingSprite.png ; " id="env-cube" 
+                        position="0 1.053 0" scale= "0.0351 0.0351 0.0351" rotation = "-90 0 0" 
                         animation-mixer></a-mixin>
                         <a-mixin id="halfsize" scale ="0.5 0.5 0.5" rotation= "90 0 0"></a-mixin>
 
@@ -83,9 +82,9 @@
 					
 					<!-- Here goes the scene's light -->
 
-					<a-light type="ambient" color="#7ed66b" intensity="20" position="0.8232289639410555 2.54013359940121 3.726518860534445"></a-light>
-
-					<a-light type="directional" color="#7ed66b" position="1.198651275435239 1.494435921038039 2.825317943460628" intensity="4" light="color:#3ecaff"></a-light>
+					<a-entity light="type:ambient;intensity:1"></a-entity>
+        			<a-entity light="intensity:0.5" position="1 4 0"></a-entity>
+       				<a-entity light="intensity:0.5" position="-1 4 0"></a-entity>
 					
 					<!-- Markers go here -->
 
@@ -130,13 +129,6 @@
 					</a-marker>
 
 					<a-entity camera>
-						<a-entity 
-							gesture-cursor
-							cursor
-							position="0 0 -1"
-							geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.015"
-		          			material="color: black; shader: flat"
-						></a-entity>
 					</a-entity>
 
 				</a-scene>
