--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,8 @@
 					<!-- Here goes the scene's light -->
 
 					<a-entity light="type:ambient;intensity:1"></a-entity>
-        			<a-entity light="intensity:0.5" position="1 4 0"></a-entity>
-       				<a-entity light="intensity:0.5" position="-1 4 0"></a-entity>
+        			<a-entity light="intensity:0.8" position="1 4 0"></a-entity>
+       				<a-entity light="intensity:0.8" position="-1 4 0"></a-entity>
 					
 					<!-- Markers go here -->
 
@@ -92,7 +92,10 @@
 						<!-- Marker's model goes here -->
 						<a-entity 
 						gltf-model="#01_entelsecure"
-						mixin="env-cube ">
+						mixin="env-cube "
+						cube-env-map="path: assets/cubemap;
+                        extension: jpg;
+                        reflectivity: 0.5;" >
                          ></a-entity>
 					</a-marker>
 
@@ -116,7 +119,7 @@
 						<!-- Marker's model goes here -->
 						<a-entity 
 						gltf-model="#04_plataformavirtual"
-						mixin="env-cube ">
+						mixin="env-cube">
                          ></a-entity>
 					</a-marker>
 
