--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 					
 		      		<ons-carousel-item style="background-color: #085078;">
 		      			<div class="entel-slide-container">
-		      				
+		      				<img class="imagen" src="assets/raweb.png">
 							<div>
 							<ons-button id="miboton" onClick="clickCallback()">Empezar</ons-button>	
 							</div>							
@@ -111,4 +111,4 @@
 
 			</template>	</a-marker>
 </body>
-</html>
+</html>		
