change the style of the presentation

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
 					
 		      		<ons-carousel-item style="background-color: #085078;">
 		      			<div class="entel-slide-container">
-		      				<img class="imagen" src="assets/raweb.png">
+		      				<div >		     
+		      	 				<img class="imagen" src="assets/raweb.png">
+		      	 			</div>
 							<div>
 							<ons-button id="miboton" onClick="clickCallback()">Empezar</ons-button>	
 							</div>							
